# elementary-plotlib

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aggplus_pixel_format.h  axis_simple.cpp  axis_simple.h  build.lhelper  canvas.h  colors.cpp  fatal.h  font_lookup.cpp  fonts.cpp  fox-integration.html  gamma.cpp  generalities.html  genindex.html  graph_mutex.h  graphical-element.html  image_buf.h  index.html  main-plot.cpp  main-test.cpp  makedefs  meson.build  meson_options.txt  objects.inv  pixel_fmt.h  plot-elements-notes.md  plot.cpp  plot.h  plot.html  plot_axis.cpp  plot_axis.h  plot_style.h  pthreadpp.h  render_config.h  rendering_buffer_utils.cpp  (+19 more)
_sources/: fox-integration.rst.txt  generalities.rst.txt  graphical-element.rst.txt  index.rst.txt  plot.rst.txt  window.rst.txt
doc/: code-refactor-todo.txt  code-simple-refactor-todo.txt  libcanvas-api.rst  note-draw-axis-with-labels.txt  windows-classes-notes.md
fox/: FXElemBaseWindow.cpp  FXElemPlotWindow.cpp  FXElemWindow.cpp  FXElpWindow.cpp  FXLibcanvasWindow.cpp  FoxWindow.cpp  GraphicsWindow.cpp  LibcanvasWindow.cpp  PlotCanvas.cpp  PlotCanvas.h  PlotCanvasWindow.cpp  PlotCanvasWindow.h  elem_plot_fox_cpp.cpp  fox_elem_window_factory.cpp  meson.build  window_fox.cpp  window_fox.h  window_fox_kernel.cpp
html/: graphical-element.html  plot.html  searchindex.js  window.html
html/_sources/: plot.rst.txt
html/_static/: bizstyle.js
include/: FXElemBaseWindow.h  FXElemPlotWindow.h  FXElemWindow.h  FXElpWindow.h  FXLibcanvasWindow.h  agg_font_freetype.h  agg_pixfmt_rgb24_lcd.h  canvas.h  canvas_curve.h  canvas_dashed.h  canvas_markers.h  canvas_object.h  canvas_path.h  canvas_svg.h  categories.h  colors.h  complete_notify.h  debug_log.h  debug_priv.h  defs.h  display_window.h  display_window_status.h  draw_svg.h  drawing_element.h  elem_plot.h  elem_plot_c.h  elem_plot_c_forward.h  elem_plot_class.h  elem_plot_constants.h  elem_plot_cpp.h  elem_plot_fox.h  elem_plot_fox_cpp.h  elem_plot_lua.h  elem_window.h  elem_window_factory.h  fatal.h  fox_elem_window_factory.h  gc_context.h  global_elem_window_factory.h  image_buf.h  (+68 more)
include/elem/: elem.h  elem_c.h  elem_c_forward.h  elem_cpp.h  elem_fox.h  elem_generator.h  elem_lua.h  elem_lua_c.h  elem_lua_cpp.h  elem_utils.h
include/fox/: GraphicsWindow.h  LibcanvasWindow.h  PlotCanvas.h  window_fox.h
include/sdl/: window_sdl.h
include/win32/: agg_win32_bmp.h  start_window.h  window_win32.h
include/wx/elem/: basewindow.h
include/xwindow/: x_connection.h  x_image.h  xwindow.h
lua/: bridge-defs.lua  bridge-test.cpp  bridge-test.lua  elem_plot_lua.cpp  elem_plot_lua_c.cpp  elplot-test.lua  elplot.lua  elplotwin.lua  libelplot_lua.cpp  libelplot_lua_c.cpp  lua-test-1.lua  lua-test-2.lua  lua-test-3.lua  meson.build  sol-test.cpp  sol-test.lua  sol_test.cpp
manual/: .buildinfo  fox-integration.html  genindex.html  graphical-element-c.html  graphical-element.html  index.html  lua-bindings.html  objects.inv  plot-c.html  plot-window-lifetime.html  plot.html  search.html  searchindex.js  window-c.html  window.html
manual/_sources/: fox-integration.rst.txt  graphical-element-c.rst.txt  graphical-element.rst.txt  index.rst.txt  lua-bindings.rst.txt  plot-c.rst.txt  plot.rst.txt  window.rst.txt
samples/: lua-plot.cpp  plot-function.cpp
sdl/: meson.build  sdl_elem_window_factory.cpp  window_sdl.cpp
sphinx-doc/: github-publish.sh
sphinx-doc/homepage/source/: conf.py  index.rst
sphinx-doc/manual/source/: conf.py  fox-integration.rst  graphical-element-c.rst  graphical-element.rst  index.rst  lua-bindings.rst  plot-c.rst  plot-window-lifetime.rst  plot.rst  window-c.rst  window.rst
sphinx-doc/source/: conf.py  fox-integration.rst  graphical-element-c.rst  graphical-element.rst  index.rst  plot-c.rst  plot.rst  window-c.rst  window.rst
src/: CMakeLists.txt  agg_font_freetype.cpp  canvas_svg.cpp  elem_api_cpp_canvas.cpp  elem_api_cpp_canvas.h  elem_c.cpp  elem_cpp.cpp  elem_plot.cpp  elem_plot_c.cpp  elem_plot_class.cpp  elem_plot_cpp.cpp  elem_plot_window_c.cpp  elem_plot_window_cpp.cpp  fatal.cpp  gc_context.cpp  libcanvas.cpp  libcanvas_c.cpp  libcanvas_cpp.cpp  libcanvas_window.cpp  libcanvas_window_c.cpp  libcanvas_window_cpp.cpp  libelplot_c.cpp  libelplot_cpp.cpp  libelplot_window_c.cpp  libelplot_window_cpp.cpp  markers.cpp  meson.build  plot.cpp  plot_agent.cpp  plot_axis.cpp  plot_legend.cpp  render_config.cpp  sg_drawing_element.cpp  str.c  text.cpp  triangles_drawing_element.cpp  window_surface.cpp
tests/: CMakeLists.txt  lua-run-c.c  lua-run.cpp  lua-test-1.cpp  lua-test-1.lua  lua-test-2.cpp  lua-test-2.lua  lua-test-2b.lua  lua-test-3.cpp  lua-test-3.lua  lua-test-c-1.c  main-test.cpp  meson.build  test-auto-win32.cpp  test-bezier-c.c  test-bezier.cpp  test-custom-render-pipeline.cpp  test-fox-host-2.cpp  test-fox-host-3.cpp  test-fox-host-3b.cpp  test-fox-host-3c.cpp  test-fox-host-3d.cpp  test-fox-host-3e.cpp  test-fox-host-close.cpp  test-fox-host.cpp  test-fox-window-2.cpp  test-fox-window-3.cpp  test-fox-window-host-system.cpp  test-fox-window.cpp  test-path-custom.cpp  test-plot-copy.cpp  test-plot-dash-lines-c.c  test-plot-dash-lines.cpp  test-plot-function-c.c  test-plot-histogram.cpp  test-plot-legend-2.cpp  test-plot-legend.cpp  test-plot-show-2.cpp  test-plot-show-c.c  test-plot-show.cpp  (+25 more)
win32/: CMakeLists.txt  agg_win32_bmp.cpp  meson.build  window_win32.cpp
window/: elem_plot_window_bits.cpp  elem_plot_window_c.cpp  elem_plot_window_cpp.cpp  elem_window_c.cpp  elem_window_cpp.cpp  global_elem_window_factory.cpp  meson.build  native_elem_window_factory.cpp
wxwidgets/: meson.build  window_wx.cpp  window_wx.h  wx-test-dc.cpp  wx-test-threads.cpp
xwindow/: CMakeLists.txt  meson.build  x_connection.cpp  xwindow.cpp
